kubernetes/manifestos/prometheus/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: prometheus-ing
  namespace: prometheus
spec: 
  rules:
    - host: prometheus.192.168.122.22.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port: 
                  number: 9090
